# KG-skills

./: .gitignore  README.md  agent.example.yaml  package-lock.json  pyproject.toml
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatArea.tsx  ChatHeader.tsx  ChatInput.tsx  GraphPanel.tsx  Sidebar.tsx
frontend/components/ui/: button.tsx
frontend/store/: useAppStore.ts
skills/threat-intel-kg-agentic/: SKILL.md
skills/threat-intel-kg-agentic/agents/: openai.yaml
skills/ti-ioc-tool/: SKILL.md
skills/ti-ioc-tool/agents/: openai.yaml
skills/ti-llm-extract/: SKILL.md
skills/ti-llm-extract/agents/: openai.yaml
skills/ti-neo4j-ingest/: SKILL.md
skills/ti-neo4j-ingest/agents/: openai.yaml
src/kg_agent/: __init__.py  app_state.py  builtin_tools.py  checkpoints.py  cli.py  config.py  graph.py  kg_workflow.py  mcp_loader.py  webapp.py  worker.py
src/kg_agent/api/: __init__.py  agents.py  chat.py  conversations.py  governance.py  memory.py  meta.py  sandbox.py  sessions.py  templates.py
src/kg_agent/config/: __init__.py  loader.py  models.py
src/kg_agent/loaders/: __init__.py  mcp_loader.py  skill_loader.py  tool_loader.py
src/kg_agent/schemas/: __init__.py  payloads.py
test/: test_agent_persistence.py  test_api_agents_thread_ops.py  test_api_m2_m3.py  test_api_m4_m5_m6.py  test_env_loading.py  test_kg_workflow.py  test_redis_checkpoint.py  test_redis_config.py  test_search_gate.py  test_sqlite_checkpointer.py
test/.tmp/: debug_m5.sqlite
(+10 files in other folders)
